--- a/src/pages/navigation/navigation.css
+++ b/src/pages/navigation/navigation.css
@@ -51,7 +51,7 @@
   border: 1px solid #e6e6e6;
 }
 
-#test {
+.smplr-embed {
   width: 100%;
   height: 100%;
 }
@@ -63,7 +63,7 @@
     border: 1px solid #e6e6e6;
   }
 
-  #test {
+  .smplr-embed {
     width: 100%;
     height: 100%;
   }
